--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,50 +29,50 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <!-- Timeblocks go here -->
-    <div class="container">
+    <div class="container" id="timeblocks">
         <div class="row time-section" id="9">
           <div class="col-1 hour pt-2 bg-info box-one">9AM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
         <div class="row time-section" id="10">
           <div class="col-1 hour pt-2 bg-info box-one">10AM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
         <div class="row time-section" id="11">
           <div class="col-1 hour pt-2 bg-info box-one">11AM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
         <div class="row time-section" id="12">
           <div class="col-1 hour pt-2 bg-info box-one">12PM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
-        <div class="row time-section" id="1">
+        <div class="row time-section" id="13">
           <div class="col-1 hour pt-2 bg-info box-one">1PM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
-        <div class="row time-section" id="2">
+        <div class="row time-section" id="14">
           <div class="col-1 hour pt-2 bg-info box-one">2PM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
-        <div class="row time-section" id="3">
+        <div class="row time-section" id="15">
           <div class="col-1 hour pt-2 bg-info box-one">3PM</div>
           <textarea class="col-10 input bg-secondary text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
-        <div class="row time-section" id="4">
+        <div class="row time-section" id="16">
           <div class="col-1 hour pt-2 bg-info box-one">4PM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
-        <div class="row time-section" id="5">
+        <div class="row time-section" id="17">
           <div class="col-1 hour pt-2 bg-info box-one">5PM</div>
-          <textarea class="col-10 input bg-secondary text-white"></textarea>
+          <textarea class="col-10 input  text-white"></textarea>
           <button class="col-1 saveBtn bg-warning text-dark">Save</button>
         </div>
 
